--- a/CMS_Polizia/Views/Home/ViolazioniOver10pnt.cshtml
+++ b/CMS_Polizia/Views/Home/ViolazioniOver10pnt.cshtml
@@ -25,9 +25,6 @@
             @Html.DisplayNameFor(model => model.DataViolazione)
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.Importo)
-        </th>
-        <th>
             @Html.DisplayNameFor(model => model.PuntiDecurtati)
         </th>
 
@@ -42,6 +39,12 @@
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Nome)
+            </td>
+            <td>
+                @Html.DisplayNameFor(model => model.Indirizzo)
+            </td>
+            <td>
+                @Html.DisplayNameFor(model => model.DataViolazione)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.PuntiDecurtati)
