--- a/CMS_Polizia/Views/Shared/_Layout.cshtml
+++ b/CMS_Polizia/Views/Shared/_Layout.cshtml
@@ -1,29 +1,33 @@
 ﻿<!DOCTYPE html>
 <html>
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>@ViewBag.Title - Applicazione ASP.NET</title>
+    <link href="~/Content/Style.css" rel="stylesheet" />
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
 </head>
 <body>
-    <div class="navbar navbar-inverse navbar-fixed-top">
+    <div class="navbar navbar-inverse">
         <div class="container">
-            <div class="navbar-header">
+            @*<div class="navbar-header">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse" title="more options">
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
                 @Html.ActionLink("Nome dell'applicazione", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
-            </div>
-            <div class="navbar-collapse collapse">
-                <ul class="nav navbar-nav">
+            </div>*@
+            <h1>Polizia di Stato</h1>
+            <div>
+                <ul>
                     <li>@Html.ActionLink("Home", "Index", "Home")</li>
-                    <li>@Html.ActionLink("Informazioni", "About", "Home")</li>
-                    <li>@Html.ActionLink("Contatto", "Contact", "Home")</li>
+                    <li>@Html.ActionLink("Trasgressori", "Trasgressori")</li>
+                    <li>@Html.ActionLink("Violazioni", "Violazioni")</li>
+                    <li>@Html.ActionLink("Aggiungi Verbale", "AggiungiVerbale")</li>
+                    <li>@Html.ActionLink("Lista Verbali", "ListaVerbali")</li>
                 </ul>
             </div>
         </div>
